<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="82dp">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo_librarian"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design_director"
        android:textSize="12sp"
        android:textColor="@color/font_black3"
        android:layout_toRightOf="@id/logo"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="19dp"/>
    <TextView
        android:id="@+id/cpname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpname"
        android:textSize="10sp"
        android:textColor="@color/font_black4"
        android:layout_alignLeft="@id/position"
        android:layout_centerVertical="true"/>
    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="10sp"
        android:textColor="@color/font_black4"
        android:layout_below="@id/cpname"
        android:layout_marginTop="3dp"
        android:layout_alignLeft="@id/cpname"/>
    <TextView
        android:id="@+id/someday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/someday"
        android:textSize="10sp"
        android:textColor="@color/font_black4"
        android:layout_alignTop="@id/position"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money"
        android:textSize="10sp"
        android:textColor="@color/blue3"
        android:layout_alignTop="@id/cpname"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"/>
</RelativeLayout>
