<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homepage_relative">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/home_page"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/blue"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/home_head"
        android:adjustViewBounds="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/advanced_search"
            android:textSize="12sp"
            android:drawableTop="@mipmap/home_page_advanced_search"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/who_see"
            android:drawableTop="@mipmap/home_page_who_has_seen_me"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/part_job"
            android:drawableTop="@mipmap/home_page_icon_part_time_job"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/near_work"
            android:drawableTop="@mipmap/home_page_near_work"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="--------------------------"
            android:layout_marginLeft="3dp"/>
        <TextView
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:text="@string/recommend"
            android:textSize="10sp" />
        <TextView
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="-------------------------"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
</LinearLayout>