<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/positionName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/part_time_position_name"
            android:textSize="14sp"
            android:textColor="@color/light_black"
            />
        <TextView
            android:id="@+id/part_time_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/part_time_top"
            android:textSize="12dp"
            android:textColor="@color/dark_gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/part_time_address"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"/>
        <TextView
            android:id="@+id/workTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/part_time_time"
            android:layout_marginLeft="4dp"
            android:textSize="12sp"
            android:paddingBottom="2dp"
            android:paddingTop="3dp"
            android:paddingLeft="6dp"
            android:paddingRight="4dp"
            android:textColor="@color/white"
            android:background="@drawable/t_part_time_job_time"/>
        <TextView
            android:id="@+id/salary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:text="@string/part_time_salary"
            android:textSize="12dp"
            android:textColor="@color/dark_gray"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_marginTop="17dp"/>
</LinearLayout>