<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/blue">
        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/advanced_list_top_get_back"
            android:layout_gravity="center"
            android:layout_marginLeft="11dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/company_details"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/part_time_position_name"
                    android:textSize="14sp"
                    android:textColor="@color/light_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part_time_time"
                    android:textSize="12sp"
                    android:paddingBottom="2dp"
                    android:paddingTop="3dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="4dp"
                    android:textColor="@color/white"
                    android:background="@drawable/t_part_time_job_time"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:textSize="13sp"
                android:textColor="@color/light_black"
                android:drawableLeft="@mipmap/part_time_job_company_details_company"
                android:gravity="center"
                android:drawablePadding="13dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_address"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:textSize="13sp"
                android:textColor="@color/light_black"
                android:drawableLeft="@mipmap/part_time_job_company_details_salary"
                android:gravity="center"
                android:drawablePadding="13dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_salary"
                    android:textSize="13sp"
                    android:textColor="@color/light_black"
                    android:drawableLeft="@mipmap/company_icon"
                    android:gravity="center"
                    android:drawablePadding="13dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_salary_pay_time"
                    android:textSize="12sp"
                    android:textColor="@color/dark_gray"
                    android:layout_marginLeft="9dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_need_number"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:textSize="13sp"
                android:textColor="@color/light_black"
                android:drawableLeft="@mipmap/company_details_number_of_people"
                android:gravity="center"
                android:drawablePadding="13dp"
                android:id="@+id/textView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_work_time"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:textSize="13sp"
                android:textColor="@color/light_black"
                android:drawableLeft="@mipmap/part_time_job_company_details_date"
                android:gravity="center"
                android:drawablePadding="13dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@mipmap/part_time_job_company_details_educational_requirements"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="3dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company_education"
                            android:textSize="13sp"
                            android:textColor="@color/light_black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unlimited"
                            android:textSize="13sp"
                            android:textColor="@color/light_black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company_sex"
                            android:textSize="13sp"
                            android:textColor="@color/light_black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unlimited"
                            android:textSize="13sp"
                            android:textColor="@color/light_black"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/company_explain"
                        android:textSize="12sp"
                        android:maxEms="21"
                        android:layout_marginBottom="50dp"
                        android:lineSpacingExtra="3dp"
                        android:textColor="@color/light_black"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_share"
                android:textColor="@color/light_black"
                android:textSize="15sp"
                android:drawableLeft="@mipmap/position_message_share"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:drawablePadding="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_consultation"
                android:textColor="@color/light_black"
                android:textSize="15sp"
                android:drawableLeft="@mipmap/position_message_share"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:drawablePadding="10dp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/company_apply"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/t_enterprise_consultation_send_resume"/>
    </LinearLayout>

</LinearLayout>